Sun Jun 23 12:28:19 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/ult_src.c (test_for_include): Return NULL immediately if
	  buffer is NULL.
	  (ult_src): Use this to remove a level of indentation.

Sun Jun 23 11:14:27 BST 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.13.3.

Fri Jun 14 09:53:47 BST 2013  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Tue Jun 11 12:44:24 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/zh_CN.po: New from Translation Project (thanks, Wylmer
	  Wang).
	* configure.ac (AC_CONFIG_FILES): Add man/zh_CN/Makefile.
	* man/LINGUAS.po4a: Add zh_CN.
	* man/Makefile.am (DIST_SUBDIRS): Add zh_CN.
	* man/zh_CN/Makefile.am, man/zh_CN/translator.add: New files.
	* man/po4a/Makefile.am (POFILES): Add po/zh_CN.po.
	* man/po4a/po4a.cfg (po4a_langs): Add zh_CN.
	* man/THANKS: Add translator credit.
	* .bzrignore: Add man/zh_CN/man1, man/zh_CN/man5, and
	  man/zh_CN/man8.

Thu Jun  6 12:24:27 BST 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Check whether tbl supports the 'x' format character
	  (e.g. versions of groff before 1.20), and substitute TBL_X_FORMAT
	  accordingly.
	* man/replace.sin.in: Replace "l lx." with "l l." if tbl does not
	  support the 'x' format character.

Thu Jun  6 12:03:59 BST 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Add a check for whether 'nroff -wmac' works.
	* src/man.c (default_roff_warnings, roff_warnings): Define if
	  NROFF_WARNINGS is defined, rather than TROFF_IS_GROFF.
	  (options): Hide the --warnings option unless NROFF_WARNINGS is
	  defined.
	  (parse_opt, make_roff_command): Handle the --warnings option if
	  NROFF_WARNINGS is defined, rather than TROFF_IS_GROFF.

Thu Jun  6 11:11:36 BST 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Set MANDIR_LAYOUT using AC_SUBST as well as
	  AC_DEFINE/AC_DEFINE_UNQUOTED.
	* src/tests/Makefile.am (TESTS_ENVIRONMENT): Export MANDIR_LAYOUT.