@@ -11,6 +11,9 @@
 init
 echo -n > "$tmpdir/manpath.config"
 
+MAN_TEST_DISABLE_PATH=1
+export MAN_TEST_DISABLE_PATH
+
 write_page manx 1 "$tmpdir/usr/share/man/man1/manx.1.gz" \
     UTF-8 gz '' 'manx \- an interface to the on-line reference manuals'
 write_page manpathx 1 "$tmpdir/usr/share/prog/a/man/man1/manpathx.1.gz" \
@@ -168,4 +171,3 @@ expect_pass 'wildcards: MANDATORY_MANPATH: with wildcards: check existing man pa
     'diff -u "$tmpdir/1.exp" "$tmpdir/1.out"'
 
 finish
-
